<resources>
    <string name="app_name">fastclean</string>
    <string name="title_activity_maps">Map</string>

    //Strings Selecciones
    <string name="limpieza_casa">Casa</string>
    <string name="limpieza_oficina">Oficina</string>
    <string name="limpieza_edificio">Edificio</string>
    <string name="limpieza_evento">Evento</string>

    //Strings Botones

    <string name="seleccionar">Seleccionar</string>
    <string name="registrar">Registrarse</string>
    <string name="login">Iniciar Sesión</string>

    //Strings Login y Registro(Sign Up)
    <string name="registro">Crear Cuenta</string>
    <string name="nombres">Nombre</string>
    <string name="apellidos">Apellido</string>
    <string name="correo">Correo</string>
    <string name="contrasena">Contraseña</string>
    <string name="repetirpass">Repetir Contraseña</string>
    <string name="ingresar">Ingresa tu correo</string>
    <string name="pass">Ingresa tu contraseña</string>
    <string name="recuerdame">Recordarme</string>
    <string name="olvidar">¿Olvidaste tu Contraseña?</string>

    //Strings tipo de servicios
    <string-array name="cuartos">
        <item>Cuartos</item>
        <item>1 Cuarto</item>
        <item>2 Cuartos</item>
        <item>3 Cuartos</item>
        <item>4 Cuartos</item>
        <item>Mas de 4 cuartos</item>
    </string-array>
    <string-array name="Baños">
        <item>Baños</item>
        <item>1 Baño</item>
        <item>2 Baños</item>
        <item>3 Baños</item>
        <item>4 Baños</item>
        <item>Mas de 4 baños</item>
    </string-array>
    <string-array name="Exteriores">
        <item>Exteriores</item>
        <item>Piscina</item>
        <item>Patio</item>
        <item>Jardin</item>
    </string-array>


</resources>