<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PrincipalActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:paddingTop="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Categorias de Limpieza"
            android:textSize="30sp"
            android:fontFamily="@font/raleway_extrabold"
            android:textAllCaps="true"
            android:padding="10dp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="190dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:background="@drawable/amarillo"
                android:layout_margin="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/limpieza_casa"
                    android:textSize="30sp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/grotesk_semibold"
                    android:padding="30dp"/>

                <Button
                    android:id="@+id/buttonCasa"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:background="#00000000"
                    android:fontFamily="@font/grotesk_semibold"
                    android:padding="20dp"
                    android:text="@string/seleccionar"
                    android:textColor="@color/black" />




            </RelativeLayout>

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_alignParentRight="true"
                android:layout_marginTop="1dp"
                android:src="@drawable/casa" />

        </RelativeLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="#00000000"
            android:layout_margin="20dp"
            app:cardElevation="8dp">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:background="@drawable/oscuro">

                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/edificio"
                    android:layout_marginLeft="20dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/limpieza_edificio"
                    android:textSize="30sp"
                    android:fontFamily="@font/grotesk_semibold"
                    android:textColor="@color/white"
                    android:layout_alignParentRight="true"
                    android:padding="30dp"/>

                <Button
                    android:id="@+id/buttonEdificio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentBottom="true"
                    android:background="#00000000"
                    android:fontFamily="@font/grotesk_semibold"
                    android:padding="20dp"
                    android:text="@string/seleccionar"
                    android:textColor="@color/white" />

            </RelativeLayout>


        </androidx.cardview.widget.CardView>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="190dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:background="@drawable/verde"
                android:layout_margin="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/limpieza_oficina"
                    android:textSize="30sp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/grotesk_semibold"
                    android:padding="30dp"/>

                <Button
                    android:id="@+id/buttonOficina"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:background="#00000000"
                    android:fontFamily="@font/grotesk_semibold"
                    android:padding="20dp"
                    android:text="@string/seleccionar"
                    android:textColor="@color/black" />

            </RelativeLayout>

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_alignParentRight="true"
                android:layout_marginTop="10dp"
                android:layout_marginRight="5dp"
                android:src="@drawable/oficina" />

        </RelativeLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="#00000000"
            android:layout_margin="20dp"
            app:cardElevation="8dp">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:background="@drawable/rojo">

                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/evento"
                    android:layout_marginLeft="20dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/limpieza_evento"
                    android:textSize="30sp"
                    android:fontFamily="@font/grotesk_semibold"
                    android:textColor="@color/white"
                    android:layout_alignParentRight="true"
                    android:padding="30dp"/>

                <Button
                    android:id="@+id/buttonEventos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentBottom="true"
                    android:background="#00000000"
                    android:fontFamily="@font/grotesk_semibold"
                    android:padding="20dp"
                    android:text="@string/seleccionar"
                    android:textColor="@color/white" />

            </RelativeLayout>


        </androidx.cardview.widget.CardView>


    </LinearLayout>

</ScrollView>